--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,7 @@
         "sourceType": "module"
     },
     "rules": {
+      "no-console": "off",
+      "class-methods-use-this": "off"
     }
 }
