--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
     },
     "rules": {
       "no-console": "off",
-      "class-methods-use-this": "off"
+      "class-methods-use-this": "off",
+      "import/prefer-default-export": "off",
+      "no-useless-return": "off"
     }
 }
