--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
       "no-console": "off",
       "class-methods-use-this": "off",
       "import/prefer-default-export": "off",
-      "no-useless-return": "off"
+      "no-useless-return": "off",
+      "camelcase": "off"
     }
 }
